# sunsynk

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  BingSiteAuth.xml  CNAME  LICENSE  MANIFEST.in  README.md  build_prep.sh  docker-compose.yaml  hashmap.json  index.html  options.json.template  options.yaml.template  pyproject.toml  pyproject.toml.backup  repository.json  repository.yaml  requirements.txt  requirements_test.txt  robots.txt  setup.cfg  setup.py  sitemap.xml
.cursor/rules/: kiss-ponytail.mdc  sunsynk-addons.mdc  sunsynk-definitions.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: addon.md  bug_report.md  issue.md  library.md  sensor.md
.github/workflows/: ci.yml  dependabot-auto-approve.yml  deploy-addons.yml  deploy-docs.yml  deploy-esp.yml  deploy-multi-mp.yml  deploy-multi.yml  deploy-sunsynk.yml  deploy.yml  deploy_multi.yml  lint.yml  main.yml  trigger-hass-addons.yml
assets/: app.0ePIBUVV.js  app.17740f57.js  app.55fb91ab.js  app.5ebf13d8.js  app.973f1e00.js  app.B4zeW1dg.js  app.BAKCxQ83.js  app.CGiSMN6y.js  app.Cht2moRu.js  app.D6nF2ogw.js  app.DFvBNp8Z.js  app.c77cda9c.js  app.m_O-Y6XO.js  app.szI2vfcl.js  examples_a-mode.md.07fa5bc1.js  examples_a-mode.md.07fa5bc1.lean.js  examples_a-mode.md.091cc00a.js  examples_a-mode.md.091cc00a.lean.js  examples_a-mode.md.0b497299.js  examples_a-mode.md.0c1e59c8.js  examples_a-mode.md.0c1e59c8.lean.js  examples_a-mode.md.0c4fbcfd.js  examples_a-mode.md.0c4fbcfd.lean.js  examples_a-mode.md.0f629306.js  examples_a-mode.md.0f629306.lean.js  examples_a-mode.md.11e4d1f4.js  examples_a-mode.md.11e4d1f4.lean.js  examples_a-mode.md.162c7404.lean.js  examples_a-mode.md.2MaO3vWC.js  examples_a-mode.md.2MaO3vWC.lean.js  examples_a-mode.md.2ayR3Tfe.js  examples_a-mode.md.2ayR3Tfe.lean.js  examples_a-mode.md.31dbe2c1.js  examples_a-mode.md.31dbe2c1.lean.js  examples_a-mode.md.322d6369.js  examples_a-mode.md.322d6369.lean.js  examples_a-mode.md.32ed7cbe.js  examples_a-mode.md.32ed7cbe.lean.js  examples_a-mode.md.35646636.js  examples_a-mode.md.35646636.lean.js  (+4359 more)
assets/chunks/: @localSearchIndexroot.Beri2aeV.js  VPAlgoliaSearchBox.4e00ba8c.js  VPAlgoliaSearchBox.9cdbbd3b.js  VPAlgoliaSearchBox.B7zOFmJ2.js  VPAlgoliaSearchBox.Bebc65o4.js  VPAlgoliaSearchBox.BpZhOv_X.js  VPAlgoliaSearchBox.C7T4TlUM.js  VPAlgoliaSearchBox.DzoYV5Yf.js  VPAlgoliaSearchBox.QZxXU0mN.js  VPAlgoliaSearchBox.ZrvU2kv3.js  VPAlgoliaSearchBox.c108ad5e.js  VPAlgoliaSearchBox.ef555bb1.js  VPAlgoliaSearchBox.f6I_JJVZ.js  VPAlgoliaSearchBox.f8921efd.js  VPLocalSearchBox.DWaBS3HU.js  dev-to.BYXpf7ZN.js  dev-to.Bl_xqlvI.js  energy.DGYpItkw.js  framework.24343ae2.js  framework.5bbd4fd5.js  framework.7f5240a6.js  framework.8fda3224.js  framework.B6XFQ3rM.js  framework.BZlRFoaE.js  framework.C68zQAZh.js  framework.CXW4QS8X.js  framework.CYgl2kGL.js  framework.DAp7F7uL.js  framework.DRemAowY.js  framework.DiIf0t36.js  framework.W5TYBQHp.js  framework.dfcac6be.js  theme.091250a5.js  theme.3686ff5f.js  theme.4dbba440.js  theme.93cb0620.js  theme.BAWWtZzh.js  theme.BReYATdw.js  theme.BRmjtkjs.js  theme.Cce0CJ5n.js  (+6 more)
docs/: single-phase-backfill.md
examples/: a-mode.html  esp.html  ll-power.html  ll-settings.html  lovelace-settings.html  lovelace.html  overview.html  templates.html
guide/: deployment-options.html  energy-management.html  esp.html  fault-finding.html  getting-started.html  index.html  intro.html  mbusd.html  overview.html  standalone-deployment.html  tested-inverters.html  wiring.html
ha_addon_esp/: .state.json
hass-addon-esp/: DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
hass-addon-esp/translations/: en.yaml
hass-addon-git-push/: Dockerfile  README.md  build.yaml  config.yaml  run.sh
hass-addon-mbusd/: Dockerfile  README.md  build.json  build.yaml  config.json  config.yaml  run.sh
hass-addon-sunsynk/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.json  config.json  config.yaml  filter.py  mqtt.py  options.py  profiles.py  run.py  sensors.py
hass-addon-sunsynk-dev/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  async_modbus.py  async_modbus_use_numpy.py  build.yaml  config.yaml  filter.py  mqtt.py  options.py  profiles.py  run.py  usunsynk.py
hass-addon-sunsynk-edge/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml
hass-addon-sunsynk-edge/translations/: en.yaml
hass-addon-sunsynk-multi/: CHANGELOG.md  DOCS.md  Dockerfile  Dockerfile.local  README.md  apparmor.txt  build.yaml  config.yaml  filter.py  helpers.py  mqtt.py  options.py  requirements.txt  run.py  sensors.py  state.py
hass-addon-sunsynk-multi/translations/: en.yaml
reference/: definitions.html  definitions3ph.html  multi-options.html  mysensors.html  schedules.html  sensor-modifiers.html
scripts/: copy2local.cmd  copyexclude.txt  diff-dev.cmd  gen_sensors.py  test.cmd
src/ha_addon_esp/: __init__.py  __main__.py  esp.py
src/ha_addon_sunsynk_multi/: __main__.py  a_inverter.py  a_sensor.py  connector_manager.py  driver.py  errors.py  esp.py  helpers.py  inverter_wrapper.py  options.py  sensor_callback.py  sensor_options.py  timer_callback.py  timer_schedule.py
src/sunsynk/: __init__.py  definitions.py  definitions3ph.py  definitions3phhv.py  definitions3phlv.py  helpers.py  pysunsynk.py  rsunsynk.py  rwsensors.py  sensors.py  solarmansunsynk.py  state.py  sunsynk.py  usunsynk.py  utils.py
src/tests/: conftest.py  test_options.py
sunsynk/: __init__.py  definitions.py  definitions3ph.py  helpers.py  pysunsynk.py  rwsensors.py  sensor.py  sensors.py  solarmansunsynk.py  state.py  sunsynk.py  usunsynk.py
sunsynk/example/: main.py
tests/: README.md  conftest.py  test_addon.py  test_sensor.py  test_sunsynk.py
tests/hass-addon-sunsynk-dev/: __init__.py  test_filter.py  test_filter_dev.py  test_mqtt.py  test_mqtt_dev.py  test_run.py  test_run_dev.py
tests/hass-addon-sunsynk-multi/: __init__.py  test_filter.py  test_mqtt.py  test_run.py
www/: .eslintrc.js  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
www/docs/: index.md
(+110 files in other folders)
