[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.10,<0.11" ]

[project]
name = "sunsynk"
version = "0.9.3"
description = "Library to interface Deye/Sunsynk Hybrid Inverters"
readme = "README.md"
keywords = [ "asyncio", "deye", "inverter", "modbus", "sunsynk" ]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [ { name = "Johann Kellerman", email = "kellerza@gmail.com" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "cattrs>=25,<27",
  "mqtt-entity[options]>=1.1",
  "prettytable>=3.17,<4",
  "pymodbus[serial]==3.12.1",
]
optional-dependencies.solarman = [ "pysolarmanv5==3.0.6" ]
optional-dependencies.umodbus = [ "async-modbus==0.2.3", "connio==0.2", "umodbus==1.0.4" ]
urls.Homepage = "https://kellerza.github.io/sunsynk/"
urls.Source = "https://github.com/kellerza/sunsynk"

[dependency-groups]
dev = [
  "codespell",
  "pyproject-fmt",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-github-actions-annotate-failures",
  "types-pyyaml",
  "zuban>=0.5.1",
]

[tool.uv]
build-backend.module-name = [ "sunsynk", "ha_addon_sunsynk_multi" ]

[tool.ruff]
include = [ "src/**/*.py" ]
format.line-ending = "lf"
format.docstring-code-format = true
lint.select = [
  "A",     # flake8-builtins
  "ASYNC", # flake8-async
  "B",     # bugbear
  "D",     # pydocstyle
  "E",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PL",    # pylint
  "PTH",   # flake8-pathlib
  "PYI",   # flake8-pyi
  "RUF",   # ruff
  "UP",    # pyupgrade
  "W",     # pycodestyle
]
lint.ignore = [ "D203", "D213", "E203", "E501", "PLR2004" ]
lint.pylint.max-args = 7

[tool.codespell]
skip = "data,*.map,package-lock.json,*.map,**/cache/*,**/node_modules/*"
ignore-words-list = "HASS,hass,Hass,ist"

[tool.pytest]
ini_options.pythonpath = [ ".", "src" ]
ini_options.filterwarnings = "ignore:.+@coroutine.+deprecated.+"
ini_options.testpaths = "src\tests"
ini_options.norecursedirs = [ ".git", "modules" ]
ini_options.log_cli = true
ini_options.log_cli_level = "DEBUG"
ini_options.asyncio_mode = "auto"
ini_options.addopts = "--cov=src --cov-report xml:cov.xml"

[tool.zuban]
warn_unreachable = false
warn_unused_ignores = true  # Not yet supported in 0.6.0
