[metadata]
name = sunsynk
version = attr: sunsynk.VERSION
description = Library to interface Deye/Sunsynk Hybrid Inverters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://kellerza.github.io/sunsynk/
author = Johann Kellerman
author_email = kellerza@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = sunsynk, deye, inverter, modbus, asyncio

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    attrs>21
zip_safe = true

[options.extras_require]
umodbus =
    async_modbus==0.2.1
    umodbus==1.0.4
    connio==0.2.0
pymodbus =
    pymodbus[serial]==3.2.2
    #pymodbus==2.5.3
    #pyserial-asyncio
tests =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-github-actions-annotate-failures
    types-PyYAML
    pylint
    # For the Hass Addon (from the Dockerfile)
    mqtt-entity==0.0.3
    #paho-mqtt~=1.5
    pysolarmanv5==3.0.0
    pyyaml==6.0.1

[isort]
profile=black

[flake8]
extend-ignore = E203, E501, W503

[mypy]
disallow_untyped_defs = True

[pydocstyle]
match_dir=sunsynk
convention=google

[tool:pytest]
filterwarnings =
    ignore:.+@coroutine.+deprecated.+

[pylint.FORMAT]
max-line-length = 121
