[metadata]
name = sunsynk
version = attr: sunsynk.VERSION
description = Library to interface Deye/Sunsynk Hybrid Inverters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://kellerza.github.io/sunsynk/
author = Johann Kellerman
author_email = kellerza@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = sunsynk, deye, inverter, modbus, asyncio

[options]
package_dir=
    =src
packages=
    sunsynk
    sunsynk.definitions
    ha_addon_sunsynk_multi
python_requires = >=3.9
include_package_data = True
install_requires =
    attrs==24.2.0
    pyyaml==6.0.1
    mqtt-entity==0.0.4
    prettytable==3.8.0
    jmespath==1.0.1
zip_safe = true

[options.extras_require]
umodbus =
    async_modbus==0.2.1
    umodbus==1.0.4
    connio==0.2.0
pymodbus =
    pymodbus[serial]==3.7.2
solarman =
    pysolarmanv5==3.0.4
tests =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-github-actions-annotate-failures
    types-PyYAML
    types-jmespath
    pylint
    aiohttp==3.8.5 # Used for ESP
    mypy

[pylint.FORMAT]
max-line-length = 121

[pylint]
ignore-paths = src/tests
disable =
    too-few-public-methods, # for attrs data classes
    duplicate-code, # sensors definitions trigger a false positive


[pylint.basic]
good-names = i, j, k, ex, Run, _, ss, cb, on, id
