[metadata]
name = sunsynk
version = attr: sunsynk.VERSION
description = Library to interface Deye/Sunsynk Hybrid Inverters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://kellerza.github.io/sunsynk/
author = Johann Kellerman
author_email = kellerza@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = sunsynk, deye, inverter, modbus, asyncio

[options]
package_dir=
    =src
packages=
    sunsynk
    sunsynk.definitions
    ha_addon_sunsynk_multi
python_requires = >=3.9
include_package_data = True
install_requires =
    attrs==25.1.0
    cattrs==24.1.2
    pyyaml==6.0.2
    mqtt-entity==0.0.4
    prettytable==3.14.0
    jmespath==1.0.1
zip_safe = true

[options.extras_require]
umodbus =
    async_modbus==0.2.2
    umodbus==1.0.4
    connio==0.2.0
pymodbus =
    pymodbus[serial]==3.8.5
solarman =
    pysolarmanv5==3.0.6
tests =
    mypy
    pylint
    pytest
    pytest-asyncio
    pytest-cov
    pytest-github-actions-annotate-failures
    ruff==0.9.6
    types-jmespath
    types-PyYAML

[pylint.FORMAT]
max-line-length = 121

[pylint]
ignore-paths = src/tests
disable =
    too-few-public-methods, # for attrs data classes
    duplicate-code, # sensors definitions trigger a false positive
    too-many-instance-attributes, # for attrs data classes


[pylint.basic]
good-names = i, j, k, ex, Run, _, ss, cb, on, id
